# ligature-desktop

./: .gitignore  README.md  index.html  index.ts  main.css  package-lock.json  package.json  pnpm-lock.yaml  test.ts  tsconfig.json  vite.config.js  vite.config.ts
ligature-desktop/: package-lock.json
ligature-desktop/src-tauri/: Cargo.toml  tauri.conf.json
new/ligature-notebook/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
new/ligature-notebook-solidjs/src/: Cell.tsx
new/ligature-notebook/src/: Editor.tsx  Files.tsx  main.tsx  styles.css
new/ligature-notebook/src-tauri/: Cargo.toml  tauri.conf.json
old-packages/lig/: package-lock.json  package.json
old-packages/lig/lib/: index.ts  reader.ts  writer.ts
old-packages/ligature/: package-lock.json  package.json
old-packages/ligature-indexeddb/: README.md
old-packages/ligature-indexeddb/lib/: util.ts
old-packages/ligature-lab/: README.md
old-packages/sol/: package.json
old-packages/wander/: package-lock.json
old/ligature-notebook-solidjs/: package.json
src/: App.svelte  App.tsx  Editor.tsx  EditorPanel.tsx  Results.tsx  ShellPanel.tsx  Sources.tsx  SourcesPanel.tsx  app.css  app.html  applets.ts  bus.ts  index.ts  index.tsx  interpreter.ts  main.css  main.ts  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: App.tsx  Application.tsx  Body.tsx  Cell.svelte  Cell.tsx  EditCell.tsx  Editor.svelte  Editor.tsx  Header.tsx  History.tsx  MainApp.tsx  NotebookContent.ts  NotebookEdit.tsx  NotebookView.tsx  Result.tsx  ResultPanel.ts  Results.tsx  Store.ts  StoreProvider.tsx  Terminal.tsx  ViewCell.svelte  ViewCell.tsx
src/lib/: Editor.svelte  Greet.svelte  Main.svelte  Results.svelte  ligature-client.ts
src/routes/: +page.svelte  style.css
src/styles/: styles.css
static/: main.css
(+25 files in other folders)
