[package]
name = "ligature-notebook"
version = "0.0.0"
description = "A desktop application for working with the Wander Programming Language."
authors = ["Alex Michael Berry"]
license = "MPL-2.0"
repository = "https://github.com/almibe/ligature-notebook"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zmq = "0.10.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
